# E-commerce-Automation-DQC

./: .dockerignore  .gitignore  .pre-commit-config.yaml  README.md  env.example  env.template  main.py  pyproject.toml
airflow/dags/: dag_analytics_scan_dq_mart.py.py  dag_create_table_oltp.py.py  dag_data_seed_oltp.py.py  dag_ingest_scan_dq_staging.py.py  dag_modeling_transform_dq_dwh.py.py
docker-setup/: docker-compose.yml  requirements.txt
include/dbt/: dbt_project.yml  profiles.yml
include/dbt/models/marts/: marts_schema.yml
include/dbt/models/quarantine/: create_quarantine.sql  quarantine_bronze_customers.sql  quarantine_bronze_order_items.sql  quarantine_bronze_orders.sql  quarantine_bronze_payments.sql  quarantine_bronze_product_variants.sql  quarantine_bronze_products.sql  quarantine_bronze_shipments.sql  quarantine_core_fact.sql
include/dbt/models/staging/: staging_schema.yml  stg_customers.sql  stg_order_items.sql  stg_orders.sql  stg_payments.sql  stg_product_variants.sql  stg_products.sql  (+1 more)
include/dbt/profiles/: profiles.yml
include/dbt/snapshots/: (Reference)_customer_snapshot_sample.sql  snapshot_schema.yml
include/soda/: soda_config.yml
include/soda/dwh/: dwh_checks.yml
include/soda/mart/: mart_customer_metrics.yml  mart_daily_revenue.yml  mart_orders.yml  mart_product_performance_success_case.yml  mart_shipments.yml
include/soda/staging/: staging_checks.yml  staging_customers.yml  staging_order_items.yml  staging_orders.yml  staging_payments.yml  staging_product_variants.yml  staging_products.yml  staging_shipments.yml
(+28 files in other folders)
